@@ -1,3 +1,28 @@
+/*
+ * Bibliothek - DockingFrames
+ * Library built on Java/Swing, allows the user to "drag and drop"
+ * panels containing any Swing-Component the developer likes to add.
+ * 
+ * Copyright (C) 2009 Benjamin Sigg
+ * 
+ * This library is free software; you can redistribute it and/or
+ * modify it under the terms of the GNU Lesser General Public
+ * License as published by the Free Software Foundation; either
+ * version 2.1 of the License, or (at your option) any later version.
+ *
+ * This library is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
+ * Lesser General Public License for more details.
+ *
+ * You should have received a copy of the GNU Lesser General Public
+ * License along with this library; if not, write to the Free Software
+ * Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301  USA
+ * 
+ * Benjamin Sigg
+ * benjamin_sigg@gmx.ch
+ * CH - Switzerland
+ */
 package bibliothek.gui.dock.common.mode.station;
 
 import java.util.ArrayList;
@@ -15,13 +40,13 @@ import bibliothek.gui.dock.common.CStation;
 import bibliothek.gui.dock.common.group.CGroupMovement;
 import bibliothek.gui.dock.common.intern.CommonDockable;
 import bibliothek.gui.dock.common.intern.station.CSplitDockStation;
-import bibliothek.gui.dock.common.intern.station.CommonDockStation;
 import bibliothek.gui.dock.common.location.CMaximizedLocation;
 import bibliothek.gui.dock.common.mode.CLocationMode;
 import bibliothek.gui.dock.common.mode.CLocationModeManager;
 import bibliothek.gui.dock.common.mode.CMaximizedModeArea;
 import bibliothek.gui.dock.common.mode.CNormalModeArea;
 import bibliothek.gui.dock.common.mode.ExtendedMode;
+import bibliothek.gui.dock.common.util.CDockUtilities;
 import bibliothek.gui.dock.control.relocator.DockRelocatorEvent;
 import bibliothek.gui.dock.control.relocator.VetoableDockRelocatorAdapter;
 import bibliothek.gui.dock.control.relocator.VetoableDockRelocatorListener;
@@ -251,28 +276,13 @@ public class CSplitDockStationHandle{
 			if( dockable instanceof CommonDockable ){
 				CStation<?> workingArea = ((CommonDockable)dockable).getDockable().getWorkingArea();
 				if( workingArea == null ){
-					return getFirstWorkingArea() == null;
+					return CDockUtilities.getFirstWorkingArea( station ) == null;
 				}
 				else{
-					return getFirstWorkingArea() == workingArea;
+					return CDockUtilities.getFirstWorkingArea( station ) == workingArea;
 				}
 			}
 			return true;
-		}
-		
-		private CStation<?> getFirstWorkingArea(){
-			DockStation parent = station.getStation();
-			while( parent != null ){
-				if( parent instanceof CommonDockStation<?, ?> ){
-					CStation<?> cstation = ((CommonDockStation<?, ?>)parent).getStation();
-					if( cstation.isWorkingArea() ){
-						return cstation;
-					}
-				}
-				Dockable child = parent.asDockable();
-				parent = child == null ? null : child.getDockParent();
-			}
-			return null;
 		}
 
 		public DockableProperty getLocation( Dockable child ){
